--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ node_modules/
 *.swp
 *.swo
 
+# Claude Code local instructions (personal, not shared)
+CLAUDE.local.md
+
 # OS
 .DS_Store
 Thumbs.db
